# hacspecs-rust

./: Cargo.toml  README.md  clippy.toml  rustfmt.toml
.github/workflows/: rust.yml
src/: aes.rs  aesgcm.rs  blake2b.rs  chacha20.rs  chacha20poly1305.rs  curve25519.rs  fips202.rs  gf128.rs  hkdf.rs  hmac.rs  hpke.rs  lib.rs  p256.rs  poly1305.rs  sha2.rs
tests/: hpke-test-vectors-master.json  test_aes.rs  test_aesgcm.rs  test_blake2b.rs  test_chacha20.rs  test_chacha20poly1305.rs  test_curve25519.rs  test_fips202.rs  test_gf128.rs  test_hkdf.rs  test_hmac.rs  test_p256.rs  test_poly1305.rs  test_sha2.rs
