[package]
name = "hacspecs"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6"
num = "0.2"
# hacspec = { git = "https://github.com/hacspec/hacspec-rust", branch="denismerigoux_formalization" }
hacspec = { path = "../hacspec-rust" }
contracts = "0.3"
paste = "0.1"
wrapping_arithmetic = "0.1"

# secret_integers = "0.1.5"
secret_integers = { path = "../rust-secret-integers" }
abstract_integers = "0.1.3"
# abstract_integers = { path = "../rust-abstract-integers" }
