[package]
name = "hacspecs"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6"
num = "0.2"
contracts = "0.3"
paste = "0.1"

hacspec = { git = "https://github.com/hacspec/hacspec-rust" }
secret_integers = "0.1.6"
abstract_integers = "0.1.3"


# Building locally against local versions of hacspec dependencies
# hacspec = { path = "../hacspec-rust" }
# abstract_integers = { path = "../rust-abstract-integers" }
