[package]
name = "hacspecs"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6"
num = "0.2"
contracts = "0.3"
paste = "0.1"

hacspec = { git = "https://github.com/hacspec/hacspec-rust" }
secret_integers = { git = "https://github.com/hacspec/rust-secret-integers" }
abstract_integers = "0.1.3"

# Local dependencies for development
# secret_integers = { path = "../rust-secret-integers" }
# hacspec = { path = "../hacspec-rust" }
# abstract_integers = { path = "../rust-abstract-integers" }
